@@ -81,4 +81,15 @@ LabelFrame containing an Entry widget.
 <TR><TD><A HREF="BWidget.html">BWidget</A></TD>
 <TD>Description text</TD></TR>
 </TABLE>
-</DD></BODY></HTML>
+</DD>
+
+<BR><HR><BR><B>Load BWidget</B><BR><BR>
+
+Possible load sequence:
+<pre>
+# If package msgcat is available, its locale is used for BWidget
+package require msgcat
+# load BWidget
+package require BWidget
+</pre>
+</BODY></HTML>
