@@ -29,7 +29,21 @@ proc Widget::_opt_defaults {{prio widgetDefault}} {
 }
 Widget::_opt_defaults
 
-option read [file join $::BWIDGET::LIBRARY "lang" "en.rc"]
+# Try to load lang file corresponding to current msgcat locale
+proc Widget::_opt_lang {} {
+    set langfile [file join $::BWIDGET::LIBRARY "lang" "en.rc"]
+    if {0 != [llength [info commands ::msgcat::mcpreferences]]} {
+        foreach lang [::msgcat::mcpreferences] {
+            set l [file join $::BWIDGET::LIBRARY "lang" "$lang.rc"]
+            if {[file readable $l]} {
+                set langfile $l
+                break
+            }
+        }
+    }
+    option read $langfile
+}
+Widget::_opt_lang
 
 ## Add a TraverseIn binding to standard Tk widgets to handle some of
 ## the BWidget-specific things we do.
